# single_trailer_controller

./: CMakeLists.txt  README.md  package.xml
config/: params_hw.yaml  params_save_wp.yaml  params_sim.yaml
include/single_trailer_controller/: pure_pursuit_node.hpp  save_waypoints.hpp  serial_encoder_bridge.hpp
launch/: save_waypoints_launch.py  single_trailer_controller_launch.py
maps/: torreto.pgm  torreto.yaml  wu_chen_map1.pgm  wu_chen_map1.yaml  wu_chen_map1_obs.yaml  wu_chen_map1_obs1.pgm  wu_chen_map1_obs1.yaml  wu_chen_map1_obs2.yaml  wu_chen_map2.pgm  wu_chen_map2.yaml  wu_chen_map2_obs1.pgm  wu_chen_map2_obs1.yaml  wu_chen_map2_obs2.pgm  wu_chen_map2_obs2.yaml
mpc_paths/: mpc_wu_chen_2_obs2_promising.csv  mpc_wu_chen_2_obs2_scam.csv  no_obstacle.csv  single_obstacle.csv  single_obstacle_2.csv  wu_chen_2_obs1.csv
scripts/: map.py  mpc.py  very_hard_spline.py
src/: pure_pursuit_node.cpp  save_waypoints.cpp  serial_encoder_bridge.cpp
waypoints/: mpc_wu_chen_2_obs1.csv  physical3_spline.csv  single_obstacle_spline_2.csv  trailer_mpc_wu_chen_2_obs1.csv  trailer_mpc_wu_chen_2_obs1_spline_2.csv  wu_chen_2_obs1.csv  wu_chen_2_obs1_spline_10.csv  wu_chen_2_obs1_spline_2.csv  wu_chen_2_obs2.csv  wu_chen_2_obs2_spline_10.csv  wu_chen_obs2.csv  wu_chen_obs2_spline_10.csv  wu_chen_obs2_spline_15.csv  wu_chen_obs_1.csv  wu_chen_obs_1_spline_10.csv  wu_chen_single_curve.csv  wu_chen_straight_line.csv  wu_chen_straight_line_spline_10.csv  wu_chen_straight_line_spline_3.csv
